syntax = "proto3";

package evt;

message Evt {
    oneof event {
        PrepareToStart prepare_to_start = 1;
        GameStarted game_started = 2;
        PlayerDisconnected player_disconnected = 3;
        PlayerReconnected player_reconnected = 4;
        DoMoveReq do_move_req = 5;
        DoMoveRes do_move_res = 6;
        PlayerMove player_move = 7;
        EndGame end_game = 8;
        PlayerLeft player_left = 9;
        ErrorMessage error_message = 10;
    }
}
message PrepareToStart {
    int64 time = 1;
}

message GameStarted {
    int64 first = 1;
}

message PlayerDisconnected {
    int64 id = 1;
}

message PlayerReconnected {
    int64 id = 1;
}

message DoMoveReq {
    int64 move = 1;
}

message DoMoveRes {
    int64 id = 1;
    int64 move = 2;
    bool accept = 3;
}

message PlayerMove {
    int64 id = 1;
    int64 move = 2;
    int64 next = 3;
    int64 time_left = 4;
}

message EndGame {
    int64 winner = 1;
}

message PlayerLeft {
    int64 id = 1;
}

message ErrorMessage {
    string err = 1;
}